--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+    <meta charset="utf-8/">
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>The Road Ahead</title>
+</head>
+<body>
+
+    <header>
+        <nav>
+        </nav>
+    </header>
+        <selction>
+
+        </selction>
+    <footer>
+    </footer>
+
+</body>
+</html>
 
